--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <header>
-  <h1>Fahad — Technical Coordinator & Educator</h1>
+  <h1>Eng. Fahad Fehid — Six Sigma Leade / MBB</h1>
   <nav>
     <a href="cv/cv.html">CV</a>
     <a href="agenda/agenda.html">Training Agenda</a>
     <a href="tools/clt.html">Statistical Tools</a>
   </nav>
+
 </header>
