--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Eng. Fahad Fehid — Six Sigma Leade / MBB</h1>
+  <h1>Eng. Fahad Fehid — Six Sigma Leader / MBB</h1>
   <nav>
     <a href="cv/cv.html">CV</a>
     <a href="agenda/agenda.html">Training Agenda</a>
@@ -7,3 +7,4 @@
   </nav>
 
 </header>
+
