Correct Training Agenda link in header

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
   <h1>Eng. Fahad Fehid — Six Sigma Leader / MBB</h1>
   <nav>
     <a href="cv/cv.html">CV</a>
-    <a href="agenda/agenda.html">Training Agenda</a>
+    <a href="/agenda.html">Training Agenda</a>
     <a href="tools/clt.html">Statistical Tools</a>
   </nav>
 
 </header>
+
 
