--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Eng. Fahad Fehid — Six Sigma Leader / MBB</h1>
+            <h1>Eng. Fahad Fehid — Six Sigma Leader, MBB</h1>
             <nav>
                 <a href="index.html" class="active">Home</a>
                 <a href="cv.html">CV</a>
@@ -303,5 +303,6 @@
     </footer>
 </body>
 </html>
+
 
 
